  * classifiers of unknown (future) type are drawn as cornerless box and logged
    as anomaly
  * features, relationships, diagrams of unknown type are just anomalies
  * The stereotype field is labelled as such. Exceptions are stated only in the
    user manual.
  * stereotype images are also drawn for diagrams, features and relationships
  * linebreaks in relationship and feature labels

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 26 Aug 2023 12:00:00 +0200

crystal-facet-uml (1.50.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Diagram titles do not touch the diagram elements anymore
  * The win version includes libgcc_s_seh-1.dll and libwinpthread-1.dll
    into the distribution package
  * The res icon is part of the exe file

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 03 Jun 2023 10:00:00 +0200

crystal-facet-uml (1.50.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * IDs of classifiers are not shown anymore, names are already unique
  * Stereotype-Images: svg-path use fill and stroke colors to draw
  * in stereotype images, the svg path data may be stated in single-quotes
  * if a stereotype image is drawn, the stereotype name is not drawn

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 13 May 2023 11:00:00 +0200

crystal-facet-uml (1.49.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Stereotype-Images: svg-path draws arcs
  * In case of svg-path errors, line numbers are shown to the user
  * In case the user enters a duplicate name, a similar name is set instead

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 15 Apr 2023 14:00:00 +0200

crystal-facet-uml (1.48.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Test case testParseFloat fixed by using TEST_EXPECT_EQUAL_DOUBLE macro

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 01 Apr 2023 08:00:00 +0200

crystal-facet-uml (1.48.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Classifiers show custom stereotype images made of SVG-path subset: